spacing corrections

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -668,7 +668,7 @@ nav{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 5px;
+  margin-top: 40px;
   cursor: pointer;
 
   svg{
@@ -909,9 +909,16 @@ nav{
 
 #contact-me-container{
   .content-area{
-    //background-image: linear-gradient(#1313138f, rgba(59, 56, 1, 0.692));
     width: 100%;
     height: 100vh;
+    margin-top: calc(5vh + 10px);
+  }
+
+  h1{
+    font-size: 1.5rem;
+    font-family: 'Righteous', cursive;
+    color: map-get($colors-beige,100 );
+    text-shadow: -4px 4px 0px rgba(150, 150, 150, 0.25);
   }
 }
 
@@ -1048,6 +1055,7 @@ nav{
     }
     .project-card-header-container{
       width: 70%;
+      margin-left: calc(50vw - 35%);
     
       svg{
         width: 3.5vw;
